revision for table summarizing spread to types by report

--- a/ms/tables.Rmd
+++ b/ms/tables.Rmd
@@ -206,29 +206,35 @@ write_csv(Pc, here('ms', 'tables', 'Pc-modelsummary.csv'))
 ```{r}
 locs <- read_csv(here('data', 'localities.csv')) # see 'wildlings-NiN.Rmd'
 locs <- select(locs, reference, locality, species) %>% 
-  mutate(locality = paste(tolower(substring(locality, 1, 1)), 
-                          substring(locality, 2), sep = ""))
+  mutate(locality = tolower(locality))
 
 datlist <- readRDS(here("output","data.rds"))
 dat <- bind_rows(datlist, .id = "species") %>% 
   select(-c(age, bio01, bio19, seeds.ExP, seeds.WALD, relelev, `plantation forest`))
 
 d <- full_join(locs, dat)
-summ <- pivot_longer(d, !(1:4), names_to = "nin", values_to = "are") %>%
+summbyref <- pivot_longer(d, !(1:4), names_to = "nin", values_to = "are") %>%
   filter(wildlings > 0) %>% 
   group_by(species, reference, nin) %>% 
   summarize(daa = sum(are)/10, # units from are to decare
             n = sum(wildlings*are)) %>% 
-  filter(n > 0) %>% 
+  filter(n > 0)
+
+summbytype <- summbyref %>% 
+  group_by(species, nin) %>% 
+  summarize(n = sum(n),
+            daa = sum(daa))
+
+summ <- summbyref %>% 
   group_by(species, nin) %>% 
   summarize(reference = reference) %>% 
-  na.omit()
+  left_join(summbytype)
 
 types <- read_csv(here('data', 'types.csv')) %>% 
   transmute(nin = type, type = name)
 
 tab <- left_join(summ, types) %>%
-  select(species, code = nin, type, reference) %>% 
+  select(species, code = nin, type, wildlings = n, daa, reference) %>% 
   arrange(species, code) %>% 
   mutate(species = case_when(
     species == "P.contorta" ~ "Pinus contorta",
