--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -59,7 +59,7 @@ library(kableExtra)
 
 # Keywords {-}
 
-alien species, conifer, establishment likelihood, disturbance, invasibility, plantation, recruitment, seed dispersal, Wald Analytical Long-distance Dispersal (WALD)
+alien species, conifer, establishment likelihood, disturbance, invasibility, plantation, seed dispersal, Wald Analytical Long-distance Dispersal (WALD)
 
 \newpage
 
