--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -131,7 +131,7 @@
 \section*{Keywords}\label{keywords}}
 \addcontentsline{toc}{section}{Keywords}
 
-alien species, conifer, establishment likelihood, disturbance, invasibility, plantation, recruitment, seed dispersal, Wald Analytical Long-distance Dispersal (WALD)
+alien species, conifer, establishment likelihood, disturbance, invasibility, plantation, seed dispersal, Wald Analytical Long-distance Dispersal (WALD)
 
 \newpage
 
