line numbers double spaced

--- a/ms/invasibility-ms.Rmd
+++ b/ms/invasibility-ms.Rmd
@@ -22,6 +22,10 @@ header-includes:
 - \usepackage{pdflscape}
 - \newcommand{\blandscape}{\begin{landscape}}
 - \newcommand{\elandscape}{\end{landscape}}
+- \usepackage{lineno}
+- \linenumbers
+- \usepackage{setspace}
+- \doublespacing
 ---
 
 ```{r setup, include=FALSE}
