--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -70,6 +70,10 @@
 \usepackage{pdflscape}
 \newcommand{\blandscape}{\begin{landscape}}
 \newcommand{\elandscape}{\end{landscape}}
+\usepackage{lineno}
+\linenumbers
+\usepackage{setspace}
+\doublespacing
 \usepackage{booktabs}
 \usepackage{longtable}
 \usepackage{array}
