--- a/ms/invasibility-ms.tex
+++ b/ms/invasibility-ms.tex
@@ -183,8 +183,8 @@ We examine plantations of alien conifers in Norway to investigate the following 
   Can overarching characteristics of ecosystems be used to generalize patterns of wildling establishment?
 \end{enumerate}
 
-\hypertarget{methods}{%
-\section{Methods}\label{methods}}
+\hypertarget{materials-and-methods}{%
+\section{Materials and methods}\label{materials-and-methods}}
 
 \hypertarget{field-data}{%
 \subsection{Field data}\label{field-data}}
@@ -492,7 +492,7 @@ We thank Ola Westby Aamodt, Matteo De Stefano, Vigdis Frivoll, Honorata Gajda, M
 \hypertarget{data-availability-statement}{%
 \section{Data availability statement}\label{data-availability-statement}}
 
-Data will be made available via the Dryad Digital Repository.
+Data will be made available via the Dryad Digital Repository. Code is available at \url{https://github.com/julienvollering/conifer-plantation-spread}.
 
 \newpage
 
